fixed overflow bugs

--- a/notification.css
+++ b/notification.css
@@ -21,19 +21,29 @@
 }
 
 .notification .note {
+	width: 250px;
 	display: inline-block;
 	padding: 10px;
 	float: left;
+	overflow: hidden;
 }
 
 .notification .title {
 	font-size: 11pt;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 .notification .body {
 	font-size: 10pt;
+	height: 40px;
+	/*text-overflow: ellipsis;
+	white-space: nowrap;*/
 	overflow: hidden;
 	padding-top: 5px;
+	word-wrap: break-word;
+	/*text-align: justify;*/
 }
 
 .notification .close {
@@ -49,5 +59,6 @@
 .notification .close:hover {
 	border-radius: 50%;
 	color: white;
-	background-color: gray;
+	text-shadow: 2px 2px 5px rgb(215,110,96);
+	background-color: rgb(245,160,149);	/*gray;*/
 }
